--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <b class="bold-an72e">Get notified</b>
                         </span>
                     </a>
-                    <p>Follow us on Twitter for updates.</p>
+                    <p><a href="https://twitter.com/getpep">Follow us on Twitter</a> for updates.</p>
                 </div>
             </div>
         </section>
