--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <section class="Hero Secondary">
             <div class="Container">
                 <div class="Column">
-                    <h3 class="heading3-axct7">Your Voice. Your World.</h3>
-                    <p class="paragraph-gondx">Voxhub is a fresh take on the voice-first technology enabling consumers, creators and brands to engage in natural conversations on the go. Coming soon.</p>
+                    <h3 class="heading3-axct7">YCreate. Share. Listen.</h3>
+                    <p class="paragraph-gondx">Voxhub is a fresh take on voice-first technology enabling consumers, creators and brands to engage in natural conversations on the go. Coming soon.</p>
                     <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/cqo5NrwA">
                         <span class="span-jwhjg">
                             <b class="bold-an72e">Get notified</b>
