--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <section class="Hero Secondary">
             <div class="Container">
                 <div class="Column">
-                    <h3 class="heading3-axct7">Say It Your Way, With Voxhub.</h3>
-                    <p class="paragraph-gondx">Voxhub is a fresh take on audio-based social platform enabling consumers, creators and brands to engage in natural conversations on the go. Coming soon.</p>
+                    <h3 class="heading3-axct7">Listen. Share. Connect.</h3>
+                    <p class="paragraph-gondx">Voxhub is a fresh take on audio-based social platform enabling everyone to engage in voice conversations on the go. Coming soon.</p>
                     <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/cqo5NrwA">
                         <span class="span-jwhjg">
-                            <b class="bold-an72e">Get notified</b>
+                            <b class="bold-an72e">Reserve your username</b>
                         </span>
                     </a>
-                    <p><a href="https://twitter.com/getpep"><u>Follow us on Twitter for updates.</u></a></p>
+                    <p><br><a href="https://twitter.com/getpep"><u>Follow us on Twitter for updates.</u></a></p>
                 </div>
             </div>
         </section>
