--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="Container">
                 <div class="Column">
                     <h3 class="heading3-axct7">Listen. Share. Connect.</h3>
-                    <p class="paragraph-gondx">Voxhub is a fresh take on audio-based social platform enabling everyone to engage in voice conversations on the go. Coming soon.</p>
+                    <p class="paragraph-gondx">Voxhub is an audio-based social platform enabling everyone to engage in voice conversations on the go. Coming soon.</p>
                     <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/cqo5NrwA">
                         <span class="span-jwhjg">
                             <b class="bold-an72e">Reserve your username</b>
