--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p class="paragraph-gondx">Voxhub is an audio-based social platform enabling everyone to engage in voice conversations on the go. Coming soon.</p>
                     <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/cqo5NrwA">
                         <span class="span-jwhjg">
-                            <b class="bold-an72e">Reserve your username</b>
+                            <b class="bold-an72e">Reserve Username</b>
                         </span>
                     </a>
                     <p><br><a href="https://twitter.com/getpep"><u>Follow us on Twitter for updates.</u></a></p>
