--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <nav>
-                <span class="span-i5mp4">Voxhub</span>
+                <span class="span-i5mp4">voxhub</span>
             </nav>
         </header>
         <section class="Hero Secondary">
