--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <nav>
                 <span class="span-i5mp4">voxhub</span>
             </nav>
+            <a href="mailto:hi@voxhub.co" class="link-8nomu">
+                <span class="wave">👋</span>
+            </a>
         </header>
         <section class="Hero Secondary">
             <div class="Container">
