--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div class="Column">
                     <h3 class="heading3-axct7">Listen. Share. Connect.</h3>
                     <p class="paragraph-gondx">Voxhub is an audio-based social platform enabling everyone to engage in voice conversations on the go. Coming soon.</p>
-                    <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/cqo5NrwA">
+                    <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/HyiOpqKS">
                         <span class="span-jwhjg">
-                            <b class="bold-an72e">Join the beta</b>
+                            <b class="bold-an72e">Request Early Access</b>
                         </span>
                     </a>
                     <p><br><a href="https://twitter.com/getpep"><u>Follow us on Twitter for updates.</u></a></p>
