--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <b class="bold-an72e">Request Early Access</b>
                         </span>
                     </a>
-                    <p><br><a href="https://twitter.com/getpep"><u>Follow us on Twitter for updates.</u></a></p>
+                    <p><br><a href="https://twitter.com/joinvoxhub"><u>Follow us on Twitter for updates.</u></a></p>
                 </div>
             </div>
         </section>
