--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <nav>
                 <span class="span-i5mp4">voxhub</span>
             </nav>
-            <a href="mailto:hi@voxhub.co" class="link-8nomu">
-                <span class="wave">👋</span>
+             <a href="mailto:hi@voxhub.co" class="link-8nomu">
+                <span>
+                    <u class="underline-z59zh">Say hi</u>
+                </span>
             </a>
         </header>
         <section class="Hero Secondary">
