--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <nav>
                 <span class="span-i5mp4">voxhub</span>
             </nav>
-             <a href="mailto:hi@voxhub.co" class="link-8nomu">
+             <!--- <a href="mailto:hi@voxhub.co" class="link-8nomu">
                 <span>
                     <u class="underline-z59zh">Say hi</u>
                 </span>
-            </a>
+            </a> --->
         </header>
         <section class="Hero Secondary">
             <div class="Container">
