--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="Column">
                     <h3 class="heading3-axct7">Listen. Share. Connect.</h3>
                     <p class="paragraph-gondx">Voxhub is an audio-based social platform enabling everyone to engage in voice conversations on the go. Coming soon.</p>
-                    <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/HyiOpqKS">
+                    <a class="Button" href="access">
                         <span class="span-jwhjg">
                             <b class="bold-an72e">Request Early Access</b>
                         </span>
