--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <section class="Hero Secondary">
             <div class="Container">
                 <div class="Column">
-                    <h3 class="heading3-axct7">Listen. Share. Connect.</h3>
-                    <p class="paragraph-gondx">Voxhub is an audio-based social platform enabling everyone to engage in voice conversations on the go. Coming soon.</p>
+                    <h3 class="heading3-axct7">Be Heard. Be You.</h3>
+                    <p class="paragraph-gondx">Voxhub is an audio-first community that lets you listen, talk, discover and connect with people around the world through short audio clips. Coming soon.</p>
                     <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/HyiOpqKS">
                         <span class="span-jwhjg">
                             <b class="bold-an72e">Request Early Access</b>
