--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="Container">
                 <div class="Column">
                     <h3 class="heading3-axct7">Be Heard. Be You.</h3>
-                    <p class="paragraph-gondx">Voxhub is an audio-first community that lets you listen, talk, discover and connect with people around the world through short audio clips. Coming soon.</p>
+                    <p class="paragraph-gondx">Voxhub is an audio-first community that lets you listen, talk, discover and connect with people around the world through short audio clips.</p>
                     <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/HyiOpqKS">
                         <span class="span-jwhjg">
                             <b class="bold-an72e">Request Early Access</b>
