--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <div class="Column">
                     <h4 class="heading3-axct7">Be Heard. Be You.</h4>
                     <p class="paragraph-gondx">Voxhub is an audio-first community that lets you listen, talk, discover and connect with people around the world through short audio clips.</p>
-                    <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/HyiOpqKS">
+                    <span class="wave"> <a class="Button" href="https://tvob7w7rmjn.typeform.com/to/HyiOpqKS">
                         <span class="span-jwhjg">
                             <b class="bold-an72e">Request Early Access</b>
                         </span>
-                    </a>
+                        </a> </span>
                     <p><br><a href="https://twitter.com/joinvoxhub"><u>Follow us on Twitter for updates.</u></a></p>
                 </div>
             </div>
